--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "node -r dotenv/config mynode.js && ng serve",
-    "build": "ng build",
+     "build": "npm run build:ssr",
+  "build:ssr": "ng build --configuration production && ng run ssr-rotulos:server:production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:ssr-rotulos": "node dist/ssr-rotulos/server/server.mjs"
