--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node -r dotenv/config mynode.js && ng serve",
-     "build": "npm run build:ssr",
-  "build:ssr": "ng build --configuration production && ng run ssr-rotulos:server:production",
+    "build": "npm build --configuration productiongit ",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:ssr-rotulos": "node dist/ssr-rotulos/server/server.mjs"
