--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,8 @@
           },
           "configurations": {
             "production": {
+                "optimization": true,
+                "sourceMap": false,
                "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
