--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,12 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
+             "styles": [
+              "src/styles.css",
+              "node_modules/cookieconsent/build/cookieconsent.min.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/cookieconsent/build/cookieconsent.min.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
