--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-server": "^19.2.14",
     "@angular/router": "^19.2.14",
     "@angular/ssr": "^19.2.15",
+    "cookieconsent": "^3.1.1",
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
+    "ngx-cookieconsent": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
