--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-cookieconsent": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xmlbuilder": "^15.1.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
